# openshift-python

./: Dockerfile  README.md  pyproject.toml
app/: app.py
openshift/: build_config.yaml  deployment_config.yaml  route_config.yaml  service_config.yaml
