[tool.poetry]
name = "inovação_rpa_docker_openshift"
version = "0.1.0"
description = ""
authors = ["mrmodolo <marcelo.rmodolo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
